--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -31,13 +31,13 @@ isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-mysql-connector-python==8.0.33
+mysql-connector-python==8.1.0
 mysqlclient==2.1.1
 numpy==1.24.2
 packaging==23.1
 pandas==2.0.0
 plotly==5.14.1
-protobuf==3.20.3
+protobuf==4.21.12
 psycopg2-binary==2.9.2
 pyparsing==3.0.9
 pyproj==3.5.0
@@ -45,6 +45,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 rdflib==6.3.2
+rdflib-jsonld
 regex==2023.5.5
 requests==2.28.2
 shapely==2.0.1
@@ -55,3 +56,5 @@ tzdata==2023.3
 urllib3==1.26.15
 Werkzeug==2.3.1
 zipp==3.15.0
+redis
+celery[redis]
