--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - 3306:3306
 
   redis:
+    container_name: redis
     image: redis:7.2.1-alpine
 
   sdm:
@@ -71,7 +72,8 @@ services:
       - SPARQL_ENDPOINT=http://fuseki:3030/
       - SDM_ENDPOINT=http://sdm:80/
       - VIS_ENDPOINT=http://visualization:80/
-    command: sh -c "python manage.py makemigrations && python manage.py collectstatic --no-input && python manage.py migrate && gunicorn scenariodt.asgi:application -k uvicorn.workers.UvicornWorker --reload --timeout 120 --bind 0.0.0.0:8000"
+    command: sh -c "python manage.py makemigrations && python manage.py collectstatic --no-input && python manage.py migrate && gunicorn scenariodt.asgi:application -k uvicorn.workers.UvicornWorker  --timeout 120 --bind 0.0.0.0:8000"
+    # --workers 4
     volumes:
       - static_volume:/home/app/web/scenariodt/public/static/
     expose:
@@ -89,6 +91,8 @@ services:
     build:
       context: ./app
     #? ===
+    env_file:
+      - .env
     command: celery --app=scenariodt worker -l INFO # Start Celery worker
     # volumes:
     #   - static_volume:/home/app/web/scenariodt/public/static/
@@ -96,6 +100,14 @@ services:
       - db
       - redis
       - fuseki
+
+  flower:
+    image: mher/flower
+    restart: always
+    ports:
+      - 5555:5555
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
 
   nginx:
     container_name: nginx
